--- a/lecture-notes/6-lecture.ipynb
+++ b/lecture-notes/6-lecture.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -43,7 +43,7 @@
        "WordList(['A', 'cushion', 'has', 'that', 'cover', 'Supposing', 'you', 'do', 'not', 'like', 'to', 'change', 'supposing', 'it', 'is', 'very', 'clean', 'that', 'there', 'is', 'no', 'change', 'in', 'appearance', 'supposing', 'that', 'there', 'is', 'regularity', 'and', 'a', 'costume', 'is', 'that', 'any', 'the', 'worse', 'than', 'an', 'oyster', 'and', 'an', 'exchange', 'Come', 'to', 'season', 'that', 'is', 'there', 'any', 'extreme', 'use', 'in', 'feather', 'and', 'cotton', 'Is', 'there', 'not', 'much', 'more', 'joy', 'in', 'a', 'table', 'and', 'more', 'chairs', 'and', 'very', 'likely', 'roundness', 'and', 'a', 'place', 'to', 'put', 'them', 'A', 'circle', 'of', 'fine', 'card', 'board', 'and', 'a', 'chance', 'to', 'see', 'a', 'tassel'])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -79,7 +79,7 @@
        "WordList(['A', 'cushion', 'has', 'that', 'cover', '.', 'Supposing', 'you', 'do', 'not', 'like', 'to', 'change', ',', 'supposing', 'it', 'is', 'very', 'clean', 'that', 'there', 'is', 'no', 'change', 'in', 'appearance', ',', 'supposing', 'that', 'there', 'is', 'regularity', 'and', 'a', 'costume', 'is', 'that', 'any', 'the', 'worse', 'than', 'an', 'oyster', 'and', 'an', 'exchange', '.', 'Come', 'to', 'season', 'that', 'is', 'there', 'any', 'extreme', 'use', 'in', 'feather', 'and', 'cotton', '.', 'Is', 'there', 'not', 'much', 'more', 'joy', 'in', 'a', 'table', 'and', 'more', 'chairs', 'and', 'very', 'likely', 'roundness', 'and', 'a', 'place', 'to', 'put', 'them', '.', 'A', 'circle', 'of', 'fine', 'card', 'board', 'and', 'a', 'chance', 'to', 'see', 'a', 'tassel', '.'])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,69 +90,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[('and', 7),\n",
-       " ('is', 5),\n",
-       " ('.', 5),\n",
-       " ('that', 5),\n",
-       " ('a', 5),\n",
-       " ('there', 4),\n",
-       " ('to', 4),\n",
-       " ('in', 3),\n",
-       " ('an', 2),\n",
-       " ('any', 2),\n",
-       " (',', 2),\n",
-       " ('more', 2),\n",
-       " ('A', 2),\n",
-       " ('very', 2),\n",
-       " ('supposing', 2),\n",
-       " ('not', 2),\n",
-       " ('change', 2),\n",
-       " ('joy', 1),\n",
-       " ('appearance', 1),\n",
-       " ('it', 1),\n",
-       " ('put', 1),\n",
-       " ('regularity', 1),\n",
-       " ('costume', 1),\n",
-       " ('table', 1),\n",
-       " ('fine', 1),\n",
-       " ('exchange', 1),\n",
-       " ('cotton', 1),\n",
-       " ('use', 1),\n",
-       " ('no', 1),\n",
-       " ('much', 1),\n",
-       " ('feather', 1),\n",
-       " ('oyster', 1),\n",
-       " ('Supposing', 1),\n",
-       " ('you', 1),\n",
-       " ('has', 1),\n",
-       " ('Come', 1),\n",
-       " ('do', 1),\n",
-       " ('them', 1),\n",
-       " ('worse', 1),\n",
-       " ('see', 1),\n",
-       " ('season', 1),\n",
-       " ('chance', 1),\n",
-       " ('cushion', 1),\n",
-       " ('card', 1),\n",
-       " ('than', 1),\n",
-       " ('extreme', 1),\n",
-       " ('tassel', 1),\n",
-       " ('like', 1),\n",
-       " ('chairs', 1),\n",
-       " ('of', 1)]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'tokens' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-36807bc849d8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mcollections\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mCounter\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mtypes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCounter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtokens\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mtypes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmost_common\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tokens' is not defined"
+     ]
     }
    ],
    "source": [
@@ -166,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -177,7 +128,7 @@
        "u'A cushion ha that cover . Suppos you do not like to chang , suppos it is veri clean that there is no chang in appear , suppos that there is regular and a costum is that ani the wors than an oyster and an exchang . Come to season that is there ani extrem use in feather and cotton . Is there not much more joy in a tabl and more chair and veri like round and a place to put them . A circl of fine card board and a chanc to see a tassel .'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -209,7 +160,7 @@
        "u'A cushion have that cover Supposing you do not like to change suppose it be very clean that there be no change in appearance suppose that there be regularity and a costume be that any the bad than an oyster and an exchange Come to season that be there any extreme use in feather and cotton Is there not much more joy in a table and more chair and very likely roundness and a place to put them A circle of fine card board and a chance to see a tassel'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,6 +191,116 @@
     "    lemmas.append(word.lemmatize(wpos))\n",
     "    \n",
     "' '.join(lemmas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[WordList(['A', 'cushion', 'has']),\n",
+       " WordList(['cushion', 'has', 'that']),\n",
+       " WordList(['has', 'that', 'cover']),\n",
+       " WordList(['that', 'cover', 'Supposing']),\n",
+       " WordList(['cover', 'Supposing', 'you']),\n",
+       " WordList(['Supposing', 'you', 'do']),\n",
+       " WordList(['you', 'do', 'not']),\n",
+       " WordList(['do', 'not', 'like']),\n",
+       " WordList(['not', 'like', 'to']),\n",
+       " WordList(['like', 'to', 'change']),\n",
+       " WordList(['to', 'change', 'supposing']),\n",
+       " WordList(['change', 'supposing', 'it']),\n",
+       " WordList(['supposing', 'it', 'is']),\n",
+       " WordList(['it', 'is', 'very']),\n",
+       " WordList(['is', 'very', 'clean']),\n",
+       " WordList(['very', 'clean', 'that']),\n",
+       " WordList(['clean', 'that', 'there']),\n",
+       " WordList(['that', 'there', 'is']),\n",
+       " WordList(['there', 'is', 'no']),\n",
+       " WordList(['is', 'no', 'change']),\n",
+       " WordList(['no', 'change', 'in']),\n",
+       " WordList(['change', 'in', 'appearance']),\n",
+       " WordList(['in', 'appearance', 'supposing']),\n",
+       " WordList(['appearance', 'supposing', 'that']),\n",
+       " WordList(['supposing', 'that', 'there']),\n",
+       " WordList(['that', 'there', 'is']),\n",
+       " WordList(['there', 'is', 'regularity']),\n",
+       " WordList(['is', 'regularity', 'and']),\n",
+       " WordList(['regularity', 'and', 'a']),\n",
+       " WordList(['and', 'a', 'costume']),\n",
+       " WordList(['a', 'costume', 'is']),\n",
+       " WordList(['costume', 'is', 'that']),\n",
+       " WordList(['is', 'that', 'any']),\n",
+       " WordList(['that', 'any', 'the']),\n",
+       " WordList(['any', 'the', 'worse']),\n",
+       " WordList(['the', 'worse', 'than']),\n",
+       " WordList(['worse', 'than', 'an']),\n",
+       " WordList(['than', 'an', 'oyster']),\n",
+       " WordList(['an', 'oyster', 'and']),\n",
+       " WordList(['oyster', 'and', 'an']),\n",
+       " WordList(['and', 'an', 'exchange']),\n",
+       " WordList(['an', 'exchange', 'Come']),\n",
+       " WordList(['exchange', 'Come', 'to']),\n",
+       " WordList(['Come', 'to', 'season']),\n",
+       " WordList(['to', 'season', 'that']),\n",
+       " WordList(['season', 'that', 'is']),\n",
+       " WordList(['that', 'is', 'there']),\n",
+       " WordList(['is', 'there', 'any']),\n",
+       " WordList(['there', 'any', 'extreme']),\n",
+       " WordList(['any', 'extreme', 'use']),\n",
+       " WordList(['extreme', 'use', 'in']),\n",
+       " WordList(['use', 'in', 'feather']),\n",
+       " WordList(['in', 'feather', 'and']),\n",
+       " WordList(['feather', 'and', 'cotton']),\n",
+       " WordList(['and', 'cotton', 'Is']),\n",
+       " WordList(['cotton', 'Is', 'there']),\n",
+       " WordList(['Is', 'there', 'not']),\n",
+       " WordList(['there', 'not', 'much']),\n",
+       " WordList(['not', 'much', 'more']),\n",
+       " WordList(['much', 'more', 'joy']),\n",
+       " WordList(['more', 'joy', 'in']),\n",
+       " WordList(['joy', 'in', 'a']),\n",
+       " WordList(['in', 'a', 'table']),\n",
+       " WordList(['a', 'table', 'and']),\n",
+       " WordList(['table', 'and', 'more']),\n",
+       " WordList(['and', 'more', 'chairs']),\n",
+       " WordList(['more', 'chairs', 'and']),\n",
+       " WordList(['chairs', 'and', 'very']),\n",
+       " WordList(['and', 'very', 'likely']),\n",
+       " WordList(['very', 'likely', 'roundness']),\n",
+       " WordList(['likely', 'roundness', 'and']),\n",
+       " WordList(['roundness', 'and', 'a']),\n",
+       " WordList(['and', 'a', 'place']),\n",
+       " WordList(['a', 'place', 'to']),\n",
+       " WordList(['place', 'to', 'put']),\n",
+       " WordList(['to', 'put', 'them']),\n",
+       " WordList(['put', 'them', 'A']),\n",
+       " WordList(['them', 'A', 'circle']),\n",
+       " WordList(['A', 'circle', 'of']),\n",
+       " WordList(['circle', 'of', 'fine']),\n",
+       " WordList(['of', 'fine', 'card']),\n",
+       " WordList(['fine', 'card', 'board']),\n",
+       " WordList(['card', 'board', 'and']),\n",
+       " WordList(['board', 'and', 'a']),\n",
+       " WordList(['and', 'a', 'chance']),\n",
+       " WordList(['a', 'chance', 'to']),\n",
+       " WordList(['chance', 'to', 'see']),\n",
+       " WordList(['to', 'see', 'a']),\n",
+       " WordList(['see', 'a', 'tassel'])]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "blob.ngrams(3)"
    ]
   },
   {
@@ -391,7 +452,7 @@
     "\n",
     "blob = TextBlob(text)\n",
     "\n",
-    "nouns = list()\n",
+    "nouns = []\n",
     "for word, tag in blob.tags:\n",
     "    if tag == 'NN':\n",
     "        nouns.append(word.lemmatize())\n",
